--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Load axios from local node_modules (no CDN). Must come before aladhan.js so axios is defined. -->
+    <link rel="stylesheet" href="style.css">
     <script src="./node_modules/axios/dist/axios.js"></script>
     <script src="aladhan.js"></script>
         <title>prayer time</title>
@@ -11,7 +11,33 @@
     <body>
         <div id="prayer-times">
             <h2>Prayer Times</h2>
-            <button id="fetch-prayer-times" onclick="getPrayerTimes()">Get Prayer Times</button>
+            <input type="text" name="city" id="city-input" placeholder="Enter city name">
+            <input type="number" name="month" id="month-input" placeholder="Enter month" min="1" max="12">
+            <button id="fetch-prayer-times">Get Prayer Times</button>
+        </div>
+
+        <div id="city-name">
+            <h2 id="city-output"></h2>
+        </div>
+
+        <div id="prayer-times-output">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Fajr</th>
+                        <th>Sunrise</th>
+                        <th>Dhuhr</th>
+                        <th>Asr</th>
+                        <th>Maghrib</th>
+                        <th>Isha</th>
+                    </tr>
+                </thead>
+                <tbody id="prayer-times-info">
+                    <!-- Prayer times will be inserted here -->
+                </tbody>
+            </table>
+            
         </div>
     </body>
 </html>
